[gd_scene load_steps=5 format=3 uid="uid://bdgwrvgm46y45"]

[ext_resource type="Script" path="res://Scripts/action_button.gd" id="1_1dbq1"]
[ext_resource type="Texture2D" uid="uid://demjh14o1os2u" path="res://Assets/Sprites/Cartes/Fond_Carte.png" id="1_dvh4f"]
[ext_resource type="Texture2D" uid="uid://j5f0pwcy2alu" path="res://Assets/Sprites/Cartes/Effets/Carte_Envoi_Frontal.png" id="3_6mvb2"]
[ext_resource type="PackedScene" uid="uid://c7b8lams2ybn5" path="res://Scenes/Bulles/Bulle_blue.tscn" id="3_bqxqw"]

[node name="ActionButton" type="Button" node_paths=PackedStringArray("action_icon")]
icon = ExtResource("1_dvh4f")
script = ExtResource("1_1dbq1")
bubble_scene = ExtResource("3_bqxqw")
action_icon = NodePath("ActionIcon")

[node name="ActionIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_6mvb2")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
